# dr-manhattan

./: .env.example  .gitignore  README.md  pyproject.toml
dr_manhattan/: __init__.py
dr_manhattan/base/: __init__.py  exchange.py  exchange_client.py  exchange_config.py  exchange_factory.py  strategy.py
dr_manhattan/exchanges/: __init__.py  limitless.py  limitless_ws.py  opinion.py  polymarket.py  polymarket_ws.py
dr_manhattan/models/: __init__.py  market.py  orderbook.py
dr_manhattan/utils/: __init__.py  price.py  tui.py
examples/: README.md  list_all_markets.py  list_polymarket_crypto_weekly_markets.py  spread_strategy.py
examples/opinion/: list_opinion_markets.py  spread_strategy.py
scripts/: README.md
scripts/opinion/: check_approval.py
tests/: test_base.py  test_integration.py  test_limitless.py  test_models.py  test_opinion.py  test_polymarket.py
wiki/: README.md
wiki/exchanges/: limitless.md  opinion.md
